samples/_failures_safe/1761350486_30d1fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24d77dcb.c: In function ‘main’:
./samples/SAFE/__tmp_24d77dcb.c:133:5: error: expected declaration or statement at end of input
  133 |     int choice;
      |     ^~~
